[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
cranelift = "0.112.0"
cranelift-module = "0.112.0"
cranelift-native = "0.112.0"
cranelift-frontend = "0.112.0"
cranelift-codegen = "0.112.0"
cranelift-object = "0.112.0"
anyhow = "1.0"
target-lexicon = "0.12"
clap = { version = "4.5", features = ["derive"] }
